# binary-editor

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
.github/workflows/: ci.yml  ci_clang.yml  ci_gnu.yml  ci_msvc.yml  ci_windows.yml  docs.yml
scripts/: install_doxygen.sh  install_doxygen_windows.bat  install_vcpkg_linux.sh  install_vcpkg_windows.bat
src/: binary_editor.hpp
unit_test/: unit_binary_editor.cpp
